# axum-rs

./: Cargo.toml
src/: lib.rs
src/routes/: error_status_code.rs  header_custom_keyvalue.rs  header_user_agent.rs  hello_world.rs  middleware_message.rs  mod.rs  msg_body_json.rs  path_variables.rs  query_params.rs  read_middleware_custom_header.rs  return_201_status_code.rs  return_json.rs  set_middleware_custom_header.rs  text_body_string.rs
